refactor: separate HTTP request and response handling